# tutorial-llvm-pass

./: README.md  test.c  test_hello.c  tutorial_hello.md  tutorial_mul.md
HelloWorld/: CMakeLists.txt  HelloWorld.cpp
MultiplicationShifts/: CMakeLists.txt  MultiplicationShifts.cpp
